@@ -11,7 +11,7 @@
  */
 
 package com.adobe.skyline.migration.testutils;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 public final class TestConstants {
     public static final String TEST_PROJECT_GROUP_ID = "com.adobe.sample";
@@ -19,17 +19,17 @@ public final class TestConstants {
     public static final String TEST_PROJECT_VERSION = "1.0-SNAPSHOT";
 
     public static final String CONF_WORKFLOW_PROJECT_NAME = "ui.content";
-    public static final String MAIN_CONTENT_PATH = Paths.get("src", "main", "content").toString();
-    public static final String CONF_WORKFLOW_PATH = Paths.get(MAIN_CONTENT_PATH, "jcr_root", "conf", "global", "settings", "workflow").toString();
-    public static final String CONF_LAUNCHER_PATH = Paths.get(CONF_WORKFLOW_PATH, "launcher", "config").toString();
-    public static final String CONF_MODEL_PATH =  Paths.get(CONF_WORKFLOW_PATH, "models").toString();
+    public static final String MAIN_CONTENT_PATH = Path.of("src", "main", "content").toString();
+    public static final String CONF_WORKFLOW_PATH = Path.of(MAIN_CONTENT_PATH, "jcr_root", "conf", "global", "settings", "workflow").toString();
+    public static final String CONF_LAUNCHER_PATH = Path.of(CONF_WORKFLOW_PATH, "launcher", "config").toString();
+    public static final String CONF_MODEL_PATH =  Path.of(CONF_WORKFLOW_PATH, "models").toString();
 
     public static final String ETC_WORKFLOW_PROJECT_NAME = "ui.apps";
-    public static final String ETC_WORKFLOW_PATH = Paths.get(MAIN_CONTENT_PATH, "jcr_root", "etc", "workflow").toString();
-    public static final String ETC_LAUNCHER_PATH = Paths.get(ETC_WORKFLOW_PATH, "launcher", "config").toString();
-    public static final String ETC_MODEL_PATH =  Paths.get(ETC_WORKFLOW_PATH, "models").toString();
+    public static final String ETC_WORKFLOW_PATH = Path.of(MAIN_CONTENT_PATH, "jcr_root", "etc", "workflow").toString();
+    public static final String ETC_LAUNCHER_PATH = Path.of(ETC_WORKFLOW_PATH, "launcher", "config").toString();
+    public static final String ETC_MODEL_PATH =  Path.of(ETC_WORKFLOW_PATH, "models").toString();
 
-    public static final String VAR_WORKFLOW_PATH = Paths.get(MAIN_CONTENT_PATH, "jcr_root", "var", "workflow").toString();
+    public static final String VAR_WORKFLOW_PATH = Path.of(MAIN_CONTENT_PATH, "jcr_root", "var", "workflow").toString();
 
     public static final String CONTAINER_PACKAGE_PROJECT_NAME = "all";
 }
